<resources>
    <string name="app_name">WatchMe</string>
    <string name="trending">Trending</string>
    <string name="discover">Discover</string>
    <string name="hello">Hello!</string>
    <string name="mainTitleTrending">This week\'s Trending.</string>
    <string name="search">Search</string>
    <string name="genre">Genre</string>
    <string name="login">Login</string>
    <string name="welcomeText">Join to Movie World!</string>
    <string name="update">Update</string>
    <string name="register">Register</string>
    <string name="budget">Budget : %1$s</string>
    <string name="imdb_id">IMDB id : %1$s</string>
    <string name="contAsAGuest">Continue as a guest</string>
    <string name="email">Email</string>
    <string name="fillTheGaps">Fill the gaps</string>
    <string name="password">Password</string>
    <string name="re_password">Re-password</string>
    <string name="passHelper">* Min. 6 symbols</string>
    <string name="editPP">Edit Profile Picture</string>
    <string name="editProfile">Edit Profile Details</string>
    <string name="signOut">Sign out</string>
    <string name="favorites">Favorites</string>
    <string name="nickname">Nickname</string>
    <string name="original_language">Original language : %1$s</string>
    <string name="popularity">Popularity : %1$s</string>
    <string name="production_companies">Production Companies</string>
    <string name="production_countries">Production Countries</string>
    <string name="release_date">Release Date : %1$s</string>
    <string name="revenue">Revenue : %1$s</string>
    <string name="registered">Welcome!</string>
    <string name="categories">Categories</string>
    <string name="loading">Loading</string>
    <string name="attention">Attention</string>
    <string name="ok">OK</string>
    <string name="runtime">Runtime : %1$s</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="profile">Profile</string>
    <string name="sendResetCode">Send reset code</string>
    <string name="resetInfo">Enter your email address which you have registered. After that our team will send special link for resetting your password.</string>
    <string name="resetInfo2">Special email has been sent to your address. Please do not share with anybody! If you can not find email look at spam box in mail.</string>
    <string name="logout">Sign out</string>
    <string name="recommendations">Recommendations</string>
    <string name="spoken_languages">Spoken languages</string>
    <string name="status">Status : %1$s</string>
    <string name="vote_average">Vote average : %1$s</string>
    <string name="errorMessage">Error</string>
    <string name="passmatch">Passwords don\'t match</string>
    <string name="passMin">Password should be at least 6 symbols</string>
    <string name="vote_count">Vote count : %1$s</string>
    <string name="nickLength">Nickname\'s length should be maximum 25 symbols</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">asd</string>
</resources>