<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/themeColor"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.profile.register.RegisterFragment">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="350dp"
        app:layout_constraintWidth_min="250dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"

            android:textColorHint="@color/white"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/emailText"

                android:inputType="textEmailAddress"
                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:counterTextColor="@color/white"

            app:endIconMode="clear_text"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/nicknameText"
                android:hint="@string/nickname"
                android:inputType="text"
                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"

            android:textColorHint="@color/white"
            app:endIconMode="password_toggle"
            app:helperText="@string/passHelper"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"

                android:id="@+id/passText"
                android:inputType="textPassword"
                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"

            android:textColorHint="@color/white"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_password"
                android:id="@+id/repassText"
                android:inputType="textPassword"
                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="@color/buttonColor"

            android:elevation="3dp"
            android:fontFamily="@font/avenir_bold"
            android:paddingLeft="50dp"
            android:paddingTop="15dp"
            android:paddingRight="50dp"
            android:paddingBottom="15dp"
            android:stateListAnimator="@null"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:transitionName="registerButton"

            app:rippleColor="@color/themeColor">

        </com.google.android.material.button.MaterialButton>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:id="@+id/buttonGoBack"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@drawable/go_back_button_anim"
        android:layout_height="60dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/go_back_arrow"
            android:padding="10dp"
            android:layout_height="match_parent">

        </ImageView>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>