<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.profile.profile.ProfileFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">


      <androidx.cardview.widget.CardView
          android:layout_width="40dp"
          android:id="@+id/goBackButton"
          android:layout_height="40dp"
          android:layout_margin="5dp"
          app:cardCornerRadius="20dp"
          app:cardElevation="10dp"
          app:cardBackgroundColor="@drawable/go_back_button_anim"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">
          <ImageView
              android:layout_width="match_parent"
              android:src="@drawable/go_back_arrow"
              android:scaleType="fitCenter"
              android:padding="5dp"
              android:layout_height="match_parent">

          </ImageView>

      </androidx.cardview.widget.CardView>

      <LinearLayout
          android:id="@+id/linearLayout6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/profileHeaderColor"
          android:orientation="vertical"
          android:padding="10dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <androidx.cardview.widget.CardView
              android:layout_width="150dp"
              android:layout_height="150dp"
              android:layout_gravity="center"
              android:layout_margin="10dp"
              app:cardCornerRadius="75dp"
              app:cardElevation="5dp">
              <ImageView
                  android:id="@+id/profileImage"
                  android:layout_width="match_parent"
                  android:scaleType="fitCenter"
                  android:layout_height="match_parent">

              </ImageView>

          </androidx.cardview.widget.CardView>

          <TextView
              android:id="@+id/nickname"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_margin="5dp"
              android:fontFamily="@font/avenir_bold"
              android:gravity="center"
              android:textColor="@color/white"
              android:textSize="24sp">

          </TextView>

          <TextView
              android:id="@+id/email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_margin="5dp"
              android:fontFamily="@font/avenir_regular"
              android:gravity="center"
              android:textColor="@color/white"
              android:textSize="16sp">

          </TextView>


      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="10dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

          <TextView
              android:layout_width="match_parent"
              android:text="@string/favorites"
              android:textSize="30sp"
              android:id="@+id/favorites"
              android:padding="10dp"
              android:drawablePadding="5dp"
              android:drawableStart="@drawable/baseline_favorite_24"
              android:fontFamily="@font/avenir_bold"

              android:layout_height="wrap_content">

          </TextView>

          <ImageView
              android:layout_width="match_parent"
              android:src="@drawable/line"
              android:layout_margin="5dp"
              android:layout_height="wrap_content">

          </ImageView>
          <TextView
              android:layout_width="match_parent"
              android:text="@string/editPP"
              android:textSize="30sp"
              android:id="@+id/editPP"
              android:padding="10dp"
              android:drawablePadding="5dp"
              android:drawableStart="@drawable/baseline_person_outline_24"
              android:fontFamily="@font/avenir_bold"

              android:layout_height="wrap_content">

          </TextView>

          <ImageView
              android:layout_width="match_parent"
              android:src="@drawable/line"
              android:layout_margin="5dp"
              android:layout_height="wrap_content">

          </ImageView>
          <TextView
              android:layout_width="match_parent"
              android:text="@string/editProfile"
              android:textSize="30sp"
              android:id="@+id/editProfile"
              android:padding="10dp"
              android:drawablePadding="5dp"
              android:drawableStart="@drawable/baseline_edit_24"
              android:fontFamily="@font/avenir_bold"

              android:layout_height="wrap_content">

          </TextView>

          <ImageView
              android:layout_width="match_parent"
              android:src="@drawable/line"
              android:layout_margin="5dp"
              android:layout_height="wrap_content">

          </ImageView>
          <TextView
              android:layout_width="match_parent"
              android:text="@string/signOut"
              android:textSize="30sp"
              android:id="@+id/signOut"
              android:padding="10dp"
              android:drawablePadding="5dp"
              android:drawableStart="@drawable/baseline_exit_to_app_24"
              android:fontFamily="@font/avenir_bold"

              android:layout_height="wrap_content">

          </TextView>

          <ImageView
              android:layout_width="match_parent"
              android:src="@drawable/line"
              android:layout_margin="5dp"
              android:layout_height="wrap_content">

          </ImageView>
      </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>